website/websites/gp4/code/partialsums-scala-2.log
BUILD COMMANDS FOR: partialsums.scala-2.scala

Wed Mar 21 11:46:52 PDT 2007

( if [ ! -d partialsums.scala-2.scala_run ] ; then mkdir partialsums.scala-2.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/partialsums/partialsums.scala-2.scala partialsums.scala-2.scala_run/partialsums.scala
( cd partialsums.scala-2.scala_run ; /opt/scala-2.4.0/bin/scalac partialsums.scala )
partialsums.scala:45: error: scala.Console.printf(f.+("(2/3)^k\012")) does not take parameters
         Console.printf( f + "(2/3)^k\n" )(a1)
                                          ^
partialsums.scala:46: error: scala.Console.printf(f.+("k^-0.5\012")) does not take parameters
         Console.printf( f + "k^-0.5\n" )(a2)
                                         ^
partialsums.scala:47: error: scala.Console.printf(f.+("1/k(k+1)\012")) does not take parameters
         Console.printf( f + "1/k(k+1)\n" )(a3)
                                           ^
partialsums.scala:48: error: scala.Console.printf(f.+("Flint Hills\012")) does not take parameters
         Console.printf( f + "Flint Hills\n" )(a4)
                                              ^
partialsums.scala:49: error: scala.Console.printf(f.+("Cookson Hills\012")) does not take parameters
         Console.printf( f + "Cookson Hills\n" )(a5)
                                                ^
partialsums.scala:50: error: scala.Console.printf(f.+("Harmonic\012")) does not take parameters
         Console.printf( f + "Harmonic\n" )(a6)
                                           ^
partialsums.scala:51: error: scala.Console.printf(f.+("Riemann Zeta\012")) does not take parameters
         Console.printf( f + "Riemann Zeta\n" )(a7)
                                               ^
partialsums.scala:52: error: scala.Console.printf(f.+("Alternating Harmonic\012")) does not take parameters
         Console.printf( f + "Alternating Harmonic\n" )(a8)
                                                       ^
partialsums.scala:53: error: scala.Console.printf(f.+("Gregory\012")) does not take parameters
         Console.printf( f + "Gregory\n" )(a9)
                                          ^
9 errors found
make[3]: [partialsums.scala-2.scala_run] Error 1 (ignored)
touch partialsums.scala-2.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath partialsums.scala-2.scala_run partialsums %A
************************************************************
*   TEST (partialsums.scala-2.scala_run) FAILED - ERROR:  partialsums.scala-2.scala_out differs from Output.25000
************************************************************
-rw-r--r-- 1 dunham users 214 Feb  5  2006 Output.25000
-rw-r--r-- 1 dunham users  26 Mar 21 11:46 partialsums.scala-2.scala_out


PROGRAM OUTPUT
==============
no such file: partialsums
